связь юзера с задачками
