# internal/handlers/taskHandlers.go
@@ -14,8 +14,9 @@ func NewTaskHandler(service taskService.TaskService) *taskHandler {
 	return &taskHandler{service: service}
 }
 
+// Get all existing tasks
 func (h *taskHandler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
-	allTasks, err := h.service.GetAllTasks()
+	allTasks, err := h.service.GetTasks()
 	if err != nil {
 		return nil, err
 	}
@@ -27,20 +28,22 @@ func (h *taskHandler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject)
 			Id:     &receivedTask.ID,
 			Task:   &receivedTask.Task,
 			IsDone: &receivedTask.IsDone,
+			UserId: &receivedTask.UserID,
 		}
-
 		response = append(response, task)
 	}
 
 	return response, nil
 }
 
+// Create a new task
 func (h *taskHandler) PostTasks(_ context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
 	req := request.Body
 
 	taskToCreate := taskService.TaskRequest{
 		Task:   *req.Task,
 		IsDone: *req.IsDone,
+		UserID: *req.UserId,
 	}
 
 	task, err := h.service.CreateTask(taskToCreate)
@@ -52,11 +55,13 @@ func (h *taskHandler) PostTasks(_ context.Context, request tasks.PostTasksReques
 		Id:     &task.ID,
 		Task:   &task.Task,
 		IsDone: &task.IsDone,
+		UserId: &task.UserID,
 	}
 
 	return response, nil
 }
 
+// Update task by ID
 func (h *taskHandler) PatchTasksId(_ context.Context, request tasks.PatchTasksIdRequestObject) (tasks.PatchTasksIdResponseObject, error) {
 	id := request.Id
 	req := request.Body
@@ -80,6 +85,7 @@ func (h *taskHandler) PatchTasksId(_ context.Context, request tasks.PatchTasksId
 	return response, nil
 }
 
+// Delete task by ID
 func (h *taskHandler) DeleteTasksId(_ context.Context, request tasks.DeleteTasksIdRequestObject) (tasks.DeleteTasksIdResponseObject, error) {
 	id := request.Id
 
