# openapi/openapi.yaml
@@ -144,7 +144,26 @@ paths:
       responses:
         '204':
           description: User deleted
-
+  /users/{user_id}/tasks:
+    get:
+      summary: Get tasks for specific user
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of user's tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
     Task:
@@ -156,6 +175,8 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: string
     TaskRequest:
       type: object
       properties:
@@ -163,6 +184,8 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: string
 
     User:
       type: object
